--- a/bib.bib
+++ b/bib.bib
@@ -9034,3 +9034,11 @@ the Simulated Greenland Surface Mass Balance},
   year={2000},
   publisher={Wiley Online Library}
 }
+
+@inproceedings{TETAL2016AGU,
+  title={Why Do Climate Models Drizzle Too Much and What Impact Does This Have?},
+  author={Terai, Christopher and Caldwell, Peter and Klein, Stephen},
+  booktitle={AGU Fall Meeting Abstracts},
+  year={2016}
+}
+
