--- a/resolution.tex
+++ b/resolution.tex
@@ -239,7 +239,7 @@ It is the lack of spread in dilute CAPE between ascending/descending regions tha
 \label{fig:transect}
 \end{figure}
 
-To understand why dilute CAPE is less sensitive to subsidence in the subtropics, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the 800 hPa level in this region, which often occurs with appreciable subsiding motion aloft. Though properly a deep convection scheme, the ZM scheme is acting as a shallow convection scheme in this region. This shallow convection regime tends to produce light rain, or drizzle, which is a common bias in AGCMs \citep{D2006JCLIM}. Figure~\ref{fig:2zonal}a shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at $\sim$ 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution.
+To understand why dilute CAPE is less sensitive to subsidence in the subtropics, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the 800 hPa level in this region, which often occurs with appreciable subsiding motion aloft. Though properly a deep convection scheme, the ZM scheme is acting as a shallow convection scheme in this region \citep{TETAL2016AGU}. This shallow convection regime tends to produce light rain, or drizzle, which is a common bias in AGCMs \citep{D2006JCLIM}. Figure~\ref{fig:2zonal}a shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at $\sim$ 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution.
 
 \begin{figure}
 \begin{center}
