--- a/resolution.tex
+++ b/resolution.tex
@@ -305,7 +305,7 @@ The subtropics ($\pm (10^{\circ}-30^{\circ})$ latitude) are uniquely less sensit
 
 AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme that the authors suggest may alleviate the excess drizzle bias in CAM. As with the ZM scheme used in this study, dilute CAPE must exceed a threshold for convection to occur, but \cite{XETAL2019JAMES} also require DCAPE to be positive. Based on the analysis in this study, and the strong connection between vertical velocities and DCAPE reported in \cite{SZ2018JCLIM}, it is reasonable to speculate that DCAPE is often negative in drizzling regions, and would prevent the ZM scheme from triggering. The authors suggest that the \cite{XETAL2019JAMES} trigger be explored as a means to mitigate the drizzling bias in CAM.
 
-The stratiform scheme becomes more active with resolution, compensating for the reduction in activity of the ZM scheme with resolution, particularly as it relates to the Intertropical Convergence Zone (ITCZ). Energetically, it is expected that stratiform precipitation rates increase with resolution to compensate for the reduction in convection from the ZM scheme in order to balance radiative cooling. But this argument requires one to assume the increase in stratiform precipitation is responding to a reduction in ZM activity, whereas this study indicates the reverse, that the ZM scheme is responding to increases in subsidence with resolution, driven by greater ascent associated with stratiform cloud formation. The authors instead sought to understand the increase in stratiform precipitation with resolution at the process level. It is shown that resolved upward moisture fluxes are highly correlated with stratiform precipitation rates, and that there is an increase in both upward moisture fluxes and stratiform precipitation with resolution. Through decomposing the stratiform precipitation in the ITCZ region into the components of the moisture flux, it is shown that larger magnitude vertical velocities are associated with larger stratiform precipitation rates, and these large precipitation rates increasingly contribute to the increase in climatological stratiform precipitation rate with resolution.
+The stratiform scheme becomes more active with resolution, compensating for the reduction in activity of the ZM scheme with resolution, particularly as it relates to the Intertropical Convergence Zone (ITCZ). Energetically, it may expected that stratiform precipitation rates increase with resolution to compensate for the reduction in convection from the ZM scheme in order to balance radiative cooling. But this argument requires one to assume the increase in stratiform precipitation is responding to a reduction in ZM activity, whereas this study indicates the reverse, that the ZM scheme is responding to increases in subsidence with resolution, driven by greater ascent from stratiform cloud formation. The authors instead sought to understand the increase in stratiform precipitation with resolution at the process level. It is shown that resolved upward moisture fluxes are highly correlated with stratiform precipitation rates, and that there is an increase in both upward moisture fluxes and stratiform precipitation with resolution. Through decomposing the stratiform precipitation in the ITCZ region into the components of the moisture flux, it is shown that larger magnitude vertical velocities are associated with larger stratiform precipitation rates, and these large precipitation rates increasingly contribute to the increase in climatological stratiform precipitation rate with resolution.
 
 {\color{red}{Wrap up with a closing paragraph}}
 
